<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageview_up_pad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_pad_element"
        android:contentDescription="@string/content_description_up_pad"
        android:src="@drawable/gamepad_up" />

    <ImageView
        android:id="@+id/imageview_center_pad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_pad_element"
        android:contentDescription="@string/content_description_center_pad"
        android:src="@drawable/gamepad_center" />

    <ImageView
        android:id="@+id/imageview_down_pad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_pad_element"

        android:contentDescription="@string/content_description_down_pad"
        android:src="@drawable/gamepad_down" />

</LinearLayout>